--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
     <div class="col-md-8 mx-auto py-3">
       <!--登録しているユーザー一覧-->
       <h2 class="text-center mb-3">Users</h2>
-      <p class="button text-right"><%= link_to "退会済みユーザー全て削除", admin_destroy_all_path, method: :delete, data: {confirm: "本当に削除しますか？"}, class: 'btn btn-danger btn-sm' %></p>
+      <p class="button text-right"><%= link_to "利用停止ユーザー全て削除", admin_destroy_all_path, method: :delete, data: {confirm: "本当に削除しますか？"}, class: 'btn btn-danger btn-sm' %></p>
       <table class='table table-hover text-center'>
         <thead>
           <tr>
