--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,11 +10,11 @@
               <!--管理者がログインしていれば表示-->
             <% if admin_signed_in? %>
               <li class="nav-item mr-2">
-                <%= link_to "users", admin_users_path, class: 'nav-link text-dark'%>
+                <%= link_to "Users", admin_users_path, class: 'nav-link text-dark'%>
                 
               </li>
               <li class="nav-item mr-2">
-                <%=  link_to "posts", admin_posts_path, class: 'nav-link text-dark'%>
+                <%=  link_to "Posts", admin_posts_path, class: 'nav-link text-dark'%>
               </li>
               <li class="nav-item mr-2">
                 <%= link_to "Log out", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
@@ -22,14 +22,14 @@
               <!--ユーザーがログインしていれば表示-->
             <% elsif user_signed_in? %>
               <li class="nav-item mr-2">
-                <%= link_to "mypage", user_path(current_user), class: 'nav-link text-dark' %>
+                <%= link_to "Mypage", user_path(current_user), class: 'nav-link text-dark' %>
                 
               </li>
               <li class="nav-item mr-2">
-                <%= link_to "users", users_path, class: 'nav-link text-dark' %>
+                <%= link_to "Users", users_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item mr-2">
-                <%= link_to "posts", posts_path, class: 'nav-link text-dark' %>
+                <%= link_to "Posts", posts_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item mr-2">
                 <%= link_to " Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
