--- a/app/views/public/posts/_errors.html.erb
+++ b/app/views/public/posts/_errors.html.erb
@@ -1,8 +1,8 @@
 
-  <% if post.errors.any? %>
-  <%= post.errors.count %>件のエラーが発生しました
+  <% if obj.errors.any? %>
+  <%= obj.errors.count %>件のエラーが発生しました
   <ul>
-    <% post.errors.full_messages.each do |message| %>
+    <% obj.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
