--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render "public/posts/errors", obj: @user %>
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
@@ -13,7 +14,8 @@
       </div>
       <div class="form-group">
         <%= f.label :introduction %>
-        <%= f.text_area :introduction, class: "form-control" %>
+        <%= f.text_area :introduction, class: "form-control"%>
+        <p>５０文字以内で入力ください</p>
       </div>
       <div class="form-group">
         <%= f.submit class: "btn btn-secondary" %>
