[add]follow_count

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -33,10 +33,10 @@
                       <%= user.name %>
                     <% end %>
                 </td>
-                <td><% unless user.is_deleted == false %>
-                      <p class="status text-muted"><%= p "利用停止" %></p>
+                <td><% if user.is_deleted == false %>
+                      <p class="status text-muted"><%= p "有効" %></p>
                     <% else %>
-                      <p class="status text-success"><%= p "有効" %></P>
+                      <p class="status text-success"><%= p "利用停止" %></P>
                 　   <% end %>
                 </td>
               </tr>
