--- a/app/views/public/relationships/create.js.erb
+++ b/app/views/public/relationships/create.js.erb
@@ -1,1 +1,2 @@
 $("#relationship_btn_<%= @user.id %>").html("<%= j(render 'public/relationships/btn', user: @user) %>");
+$("#follow_count_<%= @user.id %>").html("<%= j(render 'public/users/follow_count', user: @user) %>");
