--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row text-center">
-    <div class="col-sm-12 col-md-10 col-lg-7 py-5 mx-auto m-5 bg-white">
+    <div class="col-sm-12 col-md-12 col-lg-7 py-5 my-3 mx-auto bg-white">
       <h1 class="title">Archit.</h1>
         <p class="mt-4">Archit.(アージェ)は、世界中の素晴らしい建築を写真で共有するSNSです</p>
           <p>あなたの好きな建築写真を投稿し、旅行や建築好きな方と繋がろう！</p>
@@ -10,16 +10,15 @@
     </div>
   </div>
 <!--新着投稿４件表示-->
+  <i class="fas fa-star fa-spin fa-1x mr-2" style="color: yellow;"></i><span> NEW POST</span><i class="fas fa-star fa-spin fa-1x ml-2" style="color: yellow;"></i>
+  
   <div class="row">
-   <i class="fas fa-star fa-spin fa-1x mr-2" style="color: yellow;"></i><span> NEW POST</span><i class="fas fa-star fa-spin fa-1x ml-2" style="color: yellow;"></i>
-      <div class="col-sm-12 d-flex justify-content-center">
-        <% @posts.each do |post| %>
-          <div class="pickup-img mr-2">
-            <p><%= image_tag post.get_post_image(200, 200) %></p>
-          </div>
-        <% end %>
-      </div> 
+    <% @posts.each do |post| %>
+    <div class="col-sm-12 col-md-3 col-lg-3">
+      <p><%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2 w-100" %></p>
     </div>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col text-right mb-3"> 
         <%= link_to "全ての投稿を見る＞", posts_path %>
