--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,15 +1,8 @@
 <div class="container">
   <div class="row">
-    <!--ユーザー検索用-->
-    <div class="col-md-4 mx-auto my-3">
-      <%= search_form_for @q, url: admin_users_path do |f| %>
-        <div class="input-group">
-          <%= f.search_field :name_cont, class: "form-control" ,placeholder: "ユーザー名" %>
-           <span class="input-group-btn">
-             <%= f.submit "検索", class: "btn btn-primary" %>
-           </span>
-        </div> 
-      <% end %>
+    <div class="col-sm-12 col-md-4 mx-auto my-3">
+      <!--ユーザー検索用-->
+      <%= render "public/users/search_user", q: @q %>
     </div>
   </div>
   <div class="row">
@@ -34,9 +27,9 @@
                     <% end %>
                 </td>
                 <td><% if user.is_deleted == false %>
-                      <p class="status text-muted"><%= p "有効" %></p>
+                      <p class="status text-success"><%= p "有効" %></p>
                     <% else %>
-                      <p class="status text-success"><%= p "利用停止" %></P>
+                      <p class="status text-muted"><%= p "利用停止" %></P>
                 　   <% end %>
                 </td>
               </tr>
