--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,35 +7,34 @@
           <p class="profile_image text-center">
               <%= image_tag @user.get_profile_image(100,100) %>
         　</p>
-        　<!--ユーザーの名前と紹介-->
-        　   <% unless @user.is_deleted == false %>
-              <div class="text-center text-danger">利用停止中のユーザーです</div>
-            <% end %>
-            <h6 class="card-title"><%= @user.name %></h6>
-            <p class="card-text"><%= simple_format(@user.introduction) %></p>
-            <!--編集ページのリンクとユーザー削除ボタン-->
-            <% if  @user.name != "guestuser" %>
-               <p class="link text-right">
-                 <%= link_to edit_admin_user_path(@user), class: "text-dark text-right" do %>
-                   <i class="fas fa-user-cog"></i>プロフィール編集
-                 <% end %>
-               </p>
-               <p class ="button text-right">
-                 <%= link_to "このユーザーを削除する",admin_user_path(@user), method: :delete, data: {confirm: "本当に削除しますか？"}, class: 'btn btn-danger btn-sm' %></p>
-            <% end %>
-
+        　　<!--利用停止のユーザーであれば表示-->
+        　<% unless @user.is_deleted == false %>
+            <div class="text-center text-danger">利用停止中のユーザーです</div>
+          <% end %>
+          <!--ユーザーの名前と紹介-->
+          <h6 class="card-title"><%= @user.name %></h6>
+          <p class="card-text"><%= simple_format(@user.introduction) %></p>
+          <!--編集ページのリンクとユーザー削除ボタン-->
+          <% if  @user.name != "guestuser" %>
+            <p class="link text-right">
+              <%= link_to edit_admin_user_path(@user), class: "text-dark text-right" do %>
+                <i class="fas fa-user-cog"></i>プロフィール編集
+              <% end %>
+            </p>
+            <p class ="button text-right">
+              <%= link_to "このユーザーを削除する",admin_user_path(@user), method: :delete, data: {confirm: "本当に削除しますか？"}, class: 'btn btn-danger btn-sm' %></p>
+          <% end %>
         </div>
       </div>
     </div>
     <!--ユーザーが投稿した写真一覧-->
-    <div class="col-sm-12 col-md-5 col-lg-7 offset-lg-1">
-      <div class="photo">
-        <% @posts.each do |post| %>
-            <%= link_to admin_post_path(post) do %>
-              <%= image_tag post.get_post_image(200, 200), class: "m-1" %>
-            <% end %>
+    <% @posts.each do |post| %>
+      <div class="col-sm-12 col-md-3 col-lg-3">
+        <%= link_to admin_post_path(post) do %>
+          <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-1 w-100" %>
         <% end %>
       </div>
-    </div>
+    <% end %>
+      </div>
   </div>
 </div>
