--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,25 +2,14 @@
   <div class="row">
     <div class="col-md-6 mx-auto my-3">
       <!--検索用-->
-      <%= search_form_for @q, url: posts_path do |f| %>
-        <div class="input-group">
-          <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: "form-control",placeholder: "キーワード検索" %>
-          <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
-        </div>
-      <% end %>
+      <%= render "public/posts/search_post", q: @q %>
     </div>
   </div>
   
   <h2 class="text-center mb-3">Posts</h2>
   <div class="row">
     <!--投稿写真一覧-->
-    <div class="col-sm-12">
-      <% @posts.each do |post| %>
-        <%= link_to post_path(post) do %>
-          <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2" %>
-        <% end %>
-      <% end %>
-    </div>
+      <%= render "public/posts/index", posts: @posts %>
   </div>
     <div class="row"><%= paginate @posts %></div>
 </div>
