--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,15 +1,8 @@
 <div class="container">
   <div class="row">
-    <!--ユーザー検索用-->
     <div class="col-md-4 mx-auto my-3">
-      <%= search_form_for @q, url: users_path do |f| %>
-        <div class="input-group">
-          <%= f.search_field :name_cont, class: "form-control" ,placeholder: "ユーザー名" %>
-           <span class="input-group-btn">
-             <%= f.submit "検索", class: "btn btn-primary" %>
-           </span>
-        </div> 
-      <% end %>
+      <!--ユーザー検索用-->
+　　　<%= render "public/users/search_user", q: @q %>
     </div>
   </div>
   <div class="row">
@@ -28,11 +21,8 @@
             <% if user.name != "guestuser" %>
               <tr>
                 <td><%= image_tag user.get_profile_image(50,50), class: "rounded-circle" %></td>
-                <td><%= link_to user_path(user) do %>
-                      <%= user.name %>
-                    <% end %>
-                </td>
-                <!--フォローフォロワー-->
+                <td><%= link_to user_path(user) do %><%= user.name %><% end %></td>
+                <!--フォロー・フォロワー-->
                 <td id="relationship_btn_<%= user.id %>">
                   <%= render "public/relationships/btn", user: user %>
                 </td>
