--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,16 +1,29 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 mx-auto my-3">
+    <div class="col-md-6 col-lg-6 mx-auto my-3">
       <!--検索用-->
-      <%= render "public/posts/search_post", q: @q %>
+     <%= search_form_for @q, url: posts_path do |f| %>
+       <div class="input-group">
+         <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: "form-control",placeholder: "キーワード検索" %>
+           <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
+       </div>
+     <% end %>
     </div>
   </div>
   
-  <h2 class="text-center mb-3">Posts</h2>
+    <h2 class="text-center mb-3">Posts</h2>
   <div class="row">
     <!--投稿写真一覧-->
-      <%= render "public/posts/index", posts: @posts %>
+    <% @posts.each do |post| %>
+      <div class="col-lg-3 col-md-4 col-sm-12">
+        <%= link_to post_path(post) do %>
+          <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2 w-100" %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
-    <div class="row"><%= paginate @posts %></div>
 </div>
-
+<!--ページネーション-->
+<div class="container mt-4">
+  <div class="row justify-content-center"><%= paginate @posts %></div>
+</div>
