--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,17 +1,18 @@
 <!--お気に入り保存した投稿画像一覧-->
 <div class="container">
    <h2 class="text-center mb-3">Favorites</h2>
-  <div class="row ">
-    <div class="col-sm-12 d-flex flex-wrap">
-      <% if @favorites_list.present? %>
-        <% @favorites_list.each  do |list| %>
+  <div class="row">
+    <% if @favorites_list.present? %>
+      <% @favorites_list.each  do |list| %>
+        <div class="col-lg-3 col-md-4 col-sm-12">
           <%= link_to post_path(list) do %>
-            <%= image_tag list.get_post_image(200, 200), class: "m-2" %>
+            <%= image_tag list.get_post_image(200, 200),class: "img-fluid m-2 w-100" %>
           <% end %>
-        <% end %>
-      <% else %>
-        <p>お気に入り保存している投稿はありません</p>
+        </div>
       <% end %>
-   </div>
+    <% else %>
+      <p>お気に入り保存している投稿はありません</p>
+    <% end %>
   </div>
 </div>
+
