--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,12 +1,19 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4 mx-auto my-3">
+    <div class="col-md-6 col-lg-6 mx-auto my-3">
       <!--ユーザー検索用-->
-　　　<%= render "public/users/search_user", q: @q %>
+      <%= search_form_for @q, url: users_path do |f| %>
+        <div class="input-group">
+          <%= f.search_field :name_cont, class: "form-control" ,placeholder: "ユーザー名" %>
+            <span class="input-group-btn">
+              <%= f.submit "検索", class: "btn btn-primary" %>
+            </span>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 mx-auto py-3">
+    <div class="col-sm-12 col-md-8 col-lg-10 mx-auto py-2">
       <!--登録しているユーザー一覧-->
       <h2 class="text-center mb-3">Users</h2>
       <table class="table table-hover text-center">
@@ -33,5 +40,8 @@
       </table>
     </div>
   </div>
-  <div class="row justify-content-center"><%= paginate @users %></div> 
+</div>
+<!--ページネーション-->
+<div class="container mt-4">
+  <div class="row justify-content-center"><%= paginate @users %></div>
 </div>
