--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="col-sm-12 col-md-5 col-lg-4">
       <div class="card">
         <div class="card-body">
           <!--プロフィール写真-->
@@ -33,7 +33,7 @@
                 <%= render "public/users/follow_count", user: @user %>
               </tr>
             </table>
-            <!--お気に入り保存一覧、プロフィール編集-->
+            <!--お気に入り保存一覧-->
             <% if @user == current_user %>
             <p class="link text-right">
               <%= link_to favorites_users_path, class: "text-dark text-right" do %>
@@ -41,26 +41,24 @@
               <% end %>
             </p>
             <% end %>
+            <!--プロフィール編集-->
             <% if @user == current_user && @user.name != "guestuser" %>
                <p class="link text-right">
                  <%= link_to edit_user_path(@user), class: "text-dark text-right" do %>
                    <i class="fas fa-user-cog fa-lg"></i>プロフィール編集
                  <% end %>
                </p>
-            <% end %>
+            <% end %> 
         </div>
       </div>
     </div>
-    <!--ユーザーが投稿した写真一覧-->
-        <% @posts.each do |post| %>
-           <div class="col-sm-12 col-md-3 col-lg-3">
-            <%= link_to post_path(post) do %>
-              <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-1 w-100" %>
-            <% end %>
-          </div>
-        <% end %>
-      
-    
+    　<!--ユーザーが投稿した写真一覧-->
+    <div class="col-sm-12 col-md-6 col-lg-7">　
+     <%= render "public/users/user_posts", posts: @posts %>
+    </div>
   </div>
 </div>
-<div class="container float-right"><%= paginate @posts %></div> 
+<div class="container mt-4">
+  <div class="row justify-content-center"><%= paginate @posts %></div>
+</div>
+
