--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -4,14 +4,14 @@
       <!--検索用-->
       <%= search_form_for @q, url: admin_posts_path do |f| %>
         <div class="input-group">
-          <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: "form-control",placeholder: "キーワード検索" %>
+          <%= f.search_field :architecture_or_architect_or_address_or_body_or_post_comments_comment_cont, class: "form-control",placeholder: "キーワード検索" %>
             <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
         </div>
       <% end %>
     </div>
   </div>
   
-    <h2 class="text-center mb-3">Posts</h2>
+    <h2 class="text-center mb-3">Posts <span><i class="fas fa-camera"></i></span></h2>
   <div class="row ">
       <!--投稿写真一覧-->
     <% @posts.each do |post| %>
