--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 mx-auto py-2">
       <!--登録しているユーザー一覧-->
-      <h2 class="text-center mb-3">Users</h2>
+       <h2 class="text-center mb-3">Users <span><i class="fas fa-users"></i></span></h2>
       <p class="button text-right"><%= link_to "利用停止ユーザー全て削除", admin_destroy_all_path, method: :delete, data: {confirm: "本当に削除しますか？"}, class: 'btn btn-danger btn-sm' %></p>
       <table class='table table-hover text-center'>
         <thead>
