--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
   
-    <h2 class="text-center mb-3">Posts</h2>
+    <h2 class="text-center mb-3">Posts <span><i class="fas fa-camera"></i></span></h2>
   <div class="row">
     <!--投稿写真一覧-->
     <% @posts.each do |post| %>
