--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 mx-auto py-2">
       <!--登録しているユーザー一覧-->
-      <h2 class="text-center mb-3">Users</h2>
+      <h2 class="text-center mb-3">Users <span><i class="fas fa-users"></i></span></h2>
       <table class="table table-hover text-center">
         <thead>
           <tr>
