--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -41,3 +41,15 @@ body {
   transform: rotate(-45deg);
   z-index: 3;
 }
+
+.recommendation {
+  background: linear-gradient(transparent 70%, #a7d6ff 70%);
+  text-align: center;
+}
+
+.possible {
+  background: linear-gradient(transparent 70%, #ffff00 70%);
+  text-align: center;
+}
+
+
