--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <% @posts.each do |post| %>
     <div class="col-sm-12 col-md-3 col-lg-3">
-      <p><%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2 w-100" %></p>
+      <p class="pickup-img mx-2"><%= image_tag post.get_post_image(200, 200), class: "img-fluid w-100" %></p>
     </div>
     <% end %>
   </div>
