[add]rspec_model

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-10 col-lg-8 mx-auto bg-white">
+    <div class="col-sm-12 col-md-10 col-lg-8 mx-auto py-5 bg-white">
       <h2 class="text-center m-4 px-2"><strong>About</strong></h2>
         <p class="text-center">Archit.(アージェ）は、現代建築を中心にあらゆる建築について</br>
         情報を共有することができるコミュニティサイトです！</p>
