--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -5,8 +5,8 @@
         <p class="text-center">Archit.(アージェ）は、現代建築を中心にあらゆる建築について</br>
         情報を共有することができるコミュニティサイトです！</p>
         <h5 class="recommendation w-50">こんな方にオススメ！</h5>
-          <p class="m-2">建築が好きな人はもちろん、建築を学ぶ学生さん、建築家、カメラマン、旅行先の観光や</br>
-          美術館などを探している人</p>
+          <p class="m-2">建築が好きな人はもちろん、建築を学ぶ学生さん、建築家、カメラマン、旅行先の</br>
+          観光や美術館などを探している人</p>
         <h5 class="possible w-50">このサイトで出来ること</h5>
           <h6><span><i class="fas fa-check-circle"></i></span> 写真投稿</h6>
             <p class="ml-2">あなたの旅の思い出や、お気にりの建築をアップ<span><i class="fas fa-camera"></i></span>することができます!</p>
