--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -6,8 +6,8 @@
           <!--プロフィール写真-->
           <p class="profile_image text-center">
               <%= image_tag @user.get_profile_image(100,100), class: "rounded-circle" %>
-        　</p>
-        　<!--フォローボタン-->
+          </p>
+          <!--フォローボタン-->
             <div class="text-right">
               <p id="relationship_btn_<%= @user.id %>">
                 <%= render "public/relationships/btn", user: @user %>
@@ -16,15 +16,15 @@
           <!--ユーザー名、紹介文-->
             <h6 class="card-title"><%= @user.name %></h6>
             <p class="card-text"><%= simple_format(@user.introduction) %></p>
-          　<!--投稿ボタン-->
-            <p class="button text-center mt-2">
+            <!--投稿ボタン-->
+            <div class="button text-center mt-2">
               <%= link_to new_post_path, class: "btn btn-secondary w-50" do %>
                 <i class="fas fa-pen"></i> 投稿する
               <% end %>
-            </p>
+            </div>
            <!--投稿数、フォローフォロワー人数-->
-    　　   　<table class="table table-borderless text-nowrap">
-  　　　　    　　<tr>
+           <table class="table table-borderless text-nowrap">
+              <tr>
                 <td>投稿数</td>
                 <td>フォロー</td>
                 <td>フォロワー</td>
@@ -32,32 +32,33 @@
               <tr id="follow_count_<%= @user.id %>">
                 <%= render "public/users/follow_count", user: @user %>
               </tr>
-            </table>
+           </table>
             <!--お気に入り保存一覧-->
             <% if @user == current_user %>
-            <p class="link text-right">
-              <%= link_to favorites_users_path, class: "text-dark text-right" do %>
-                <i class="fas fa-bookmark fa-lg"></i>お気に入り保存
-              <% end %>
-            </p>
+              <p class="link text-right">
+                <%= link_to favorites_users_path, class: "text-dark" do %>
+                  <i class="fas fa-bookmark fa-lg"></i>お気に入り保存
+                <% end %>
+              </p>
             <% end %>
             <!--プロフィール編集-->
             <% if @user == current_user && @user.name != "guestuser" %>
-               <p class="link text-right">
-                 <%= link_to edit_user_path(@user), class: "text-dark text-right" do %>
-                   <i class="fas fa-user-cog fa-lg"></i>プロフィール編集
-                 <% end %>
-               </p>
+              <p class="link text-right">
+                <%= link_to edit_user_path(@user), class: "text-dark" do %>
+                  <i class="fas fa-user-cog fa-lg"></i>プロフィール編集
+                <% end %>
+              </p>
             <% end %> 
         </div>
       </div>
     </div>
-    　<!--ユーザーが投稿した写真一覧-->
-    <div class="col-sm-12 col-md-6 col-lg-7">　
+    <!--ユーザーが投稿した写真一覧-->
+    <div class="col-sm-12 col-md-6 col-lg-7">
      <%= render "public/users/user_posts", posts: @posts %>
     </div>
   </div>
 </div>
+<!--ページネーション-->
 <div class="container mt-4">
   <div class="row justify-content-center"><%= paginate @posts %></div>
 </div>
