--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
-    <div class= "col-sm-10 text-center">
+    <div class= "col-sm-12 col-md-10 col-lg-10 text-center">
       <h2>本当に退会しますか？</h2>
         <p>退会すると、すべてのサービスがご利用できなくなります</br>
             再度ご利用いただく場合、新規登録のお手続きが必要となります</br>
@@ -9,8 +9,6 @@
         <%= link_to '退会しない', user_path(current_user), class: "btn btn-primary mr-4" %>
         <%= link_to "退会する", user_path(current_user), method: :delete, class: "btn btn-danger ml-4" %>
       </div>
-      </div>
-      
+    </div>
   </div>
-  
 </div>
