--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -4,7 +4,7 @@
       <!--検索用-->
      <%= search_form_for @q, url: posts_path do |f| %>
        <div class="input-group">
-         <%= f.search_field :architecture_or_architect_or_address_or_body_cont, class: "form-control",placeholder: "キーワード検索" %>
+         <%= f.search_field :architecture_or_architect_or_address_or_body_or_post_comments_comment_cont, class: "form-control",placeholder: "キーワード検索" %>
            <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
        </div>
      <% end %>
@@ -17,7 +17,7 @@
     <% @posts.each do |post| %>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <%= link_to post_path(post) do %>
-          <%= image_tag post.get_post_image(200, 200), class: "img-fluid m-2 w-100" %>
+          <%= image_tag post.get_post_image(200, 200), id: 'architect-photo', class: "img-fluid m-2 w-100" %>
         <% end %>
       </div>
     <% end %>
