--- a/app/views/public/post_comments/_count.html.erb
+++ b/app/views/public/post_comments/_count.html.erb
@@ -1,3 +1,4 @@
+<!--コメント数-->
 <p class="btn" data-toggle="modal" data-target="#exampleModalCenter">
   <i class="far fa-comment fa-lg" style="color: #0080ff;"></i>
  <span class="text-primary"><%= @post.post_comments.count %></span></p>
