--- a/app/views/admin/post_comments/_count.html.erb
+++ b/app/views/admin/post_comments/_count.html.erb
@@ -1,2 +1,3 @@
+<!--コメント数-->
 <i class="far fa-comment fa-lg" style="color: deepskyblue;"></i>
   <span class="text-primary"><%= @post.post_comments.count %></span>
