--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -95,8 +95,10 @@
         </div>
     </div>
   </div>
+    <!--ページネーション-->
   <div class="row">
     <div class="col align-self-end my-3"><%= paginate @comments %></div>
   </div>
 </div>
+
 
