--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 col-lg-6 mx-auto my-3">
       <!--検索用-->
-     <%= search_form_for @q, url: posts_path do |f| %>
+     <%= search_form_for @search, url: posts_path do |f| %>
        <div class="input-group">
          <%= f.search_field :architecture_or_architect_or_address_or_body_or_post_comments_comment_cont, class: "form-control",placeholder: "キーワード検索" %>
            <span class="input-group-btn"><%= f.submit "検索", class: "btn btn-primary" %></span>
