--- a/app/views/public/activities/index.html.erb
+++ b/app/views/public/activities/index.html.erb
@@ -1,24 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-lg-6 mx-auto my-3">
-<h2 class="text-center mb-3">通知一覧 <span><i class="fas fa-bell"></i></span></h2>
-      <table class="table table-hover text-center">
-        <% if @activities.present? %>
-        <tbody>
- 
-          <% @activities.each do |activity| %>
-              <tr>
-                <td><%= render "#{activity.action_type}", activity: activity %></td>
-                <td></td>
-              </tr>
-       
-         <% end %>
-　　　　<% else %>
-    　　　通知はありません
-　　　　<% end %>
-　　　　
-        </tbody>
-      </table>
+    <div class="col-sm-12 col-md-10 col-lg-8 mx-auto my-3">
+      <h2 class="text-center mb-3">通知一覧 <span><i class="fas fa-bell"></i></span></h2>
+        <table class="table table-hover text-center">
+          <% if @activities.present? %>
+            <tbody>
+              <% @activities.each do |activity| %>
+                <tr>
+                  <td><%= render "#{activity.action_type}", activity: activity %></td>
+                  <td><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(activity.created_at) %>前</td>
+                  <td></td>
+                </tr>
+              <% end %>
+　　　　  <% else %>
+    　　      <p>通知はありません</p>
+　　　　  <% end %>
+            </tbody>
+        </table>
     </div> 
   </div>
 </div>
