--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,8 +1,8 @@
 <!--フォロー一覧-->
 <div class="container">
   <div class="row">
-    <div class="col-md-6 mx-auto py-5">
-      <h2 class="text-center">Follow Users</h2>
+    <div class="col-sm-12 col-md-8 col-lg-10 mx-auto py-2">
+      <h2 class="text-center mb-3">Follow Users</h2>
          <%= render "public/relationships/follow_index",users: @users %>
     </div>
   </div>
