--- a/app/views/public/posts/_sort.html.erb
+++ b/app/views/public/posts/_sort.html.erb
@@ -1,15 +1,11 @@
 <%= form_with url: posts_search_path, method: :get, local: false do |f| %>
   <%= hidden_field_tag :post_ids, @post_ids %>
-  <div class="row">
-    <div class="col-xs-6" id="select_post">
-      <%=f.select :keyword, [ ["投稿が新しい順", "new"],["投稿が古い順", "old"] ], {},class: "form-control form-control-sm" %></div>
-    <div class="col-xs-4">
-      <%= f.submit %>
-     <!--< %= button_tag type: "submit", class: "btn btn-default" do %>-->
-   <!--<i class="fas fa-sort"></i>-->
-   <!--< % end %>-->
-   </div>
- </div>  
+  <div class="row" id="select_box">
+    <div class="col-xs-6">
+      <%=f.select :keyword, [ ["投稿が新しい順", "new"],["投稿が古い順", "old"] ], {},class: "form-control form-control-sm" %>
+    </div>
+    <div class="col-xs-4 select_btn">
+      <%= f.submit "並び替え"%>
+    </div>
+  </div>  
 <% end %>
-
-
