--- a/app/views/public/posts/_sort.html.erb
+++ b/app/views/public/posts/_sort.html.erb
@@ -1,3 +1,4 @@
+<!--並び替え-->
 <%= form_with url: posts_search_path, method: :get, local: false do |f| %>
   <%= hidden_field_tag :post_ids, @post_ids %>
   <div class="row">
